--- a/interfaces/applypaletteoptions.html
+++ b/interfaces/applypaletteoptions.html
@@ -38,8 +38,6 @@
 							</div>
 							<input type="checkbox" id="tsd-filter-inherited" checked />
 							<label class="tsd-widget" for="tsd-filter-inherited">Inherited</label>
-							<input type="checkbox" id="tsd-filter-only-exported" />
-							<label class="tsd-widget" for="tsd-filter-only-exported">Only exported</label>
 						</div>
 					</div>
 					<a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
@@ -94,7 +92,7 @@
 					<div class="tsd-signature tsd-kind-icon">color<wbr>Distance<wbr>Formula<span class="tsd-signature-symbol">:</span> <a href="../globals.html#colordistanceformula" class="tsd-signature-type">ColorDistanceFormula</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/helper.ts#L56">helper.ts:56</a></li>
+							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/a61d3fc/src/basicAPI.ts#L56">basicAPI.ts:56</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -104,7 +102,7 @@
 					<div class="tsd-signature tsd-kind-icon">image<wbr>Quantization<span class="tsd-signature-symbol">:</span> <a href="../globals.html#imagequantization" class="tsd-signature-type">ImageQuantization</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/helper.ts#L57">helper.ts:57</a></li>
+							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/a61d3fc/src/basicAPI.ts#L57">basicAPI.ts:57</a></li>
 						</ul>
 					</aside>
 				</section>
