--- a/interfaces/buildpaletteoptions.html
+++ b/interfaces/buildpaletteoptions.html
@@ -38,8 +38,6 @@
 							</div>
 							<input type="checkbox" id="tsd-filter-inherited" checked />
 							<label class="tsd-widget" for="tsd-filter-inherited">Inherited</label>
-							<input type="checkbox" id="tsd-filter-only-exported" />
-							<label class="tsd-widget" for="tsd-filter-only-exported">Only exported</label>
 						</div>
 					</div>
 					<a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
@@ -95,7 +93,7 @@
 					<div class="tsd-signature tsd-kind-icon">color<wbr>Distance<wbr>Formula<span class="tsd-signature-symbol">:</span> <a href="../globals.html#colordistanceformula" class="tsd-signature-type">ColorDistanceFormula</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/helper.ts#L61">helper.ts:61</a></li>
+							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/a61d3fc/src/basicAPI.ts#L61">basicAPI.ts:61</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -105,7 +103,7 @@
 					<div class="tsd-signature tsd-kind-icon">colors<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/helper.ts#L63">helper.ts:63</a></li>
+							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/a61d3fc/src/basicAPI.ts#L63">basicAPI.ts:63</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -115,7 +113,7 @@
 					<div class="tsd-signature tsd-kind-icon">palette<wbr>Quantization<span class="tsd-signature-symbol">:</span> <a href="../globals.html#palettequantization" class="tsd-signature-type">PaletteQuantization</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/helper.ts#L62">helper.ts:62</a></li>
+							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/a61d3fc/src/basicAPI.ts#L62">basicAPI.ts:62</a></li>
 						</ul>
 					</aside>
 				</section>
