--- a/interfaces/progressoptions.html
+++ b/interfaces/progressoptions.html
@@ -38,8 +38,6 @@
 							</div>
 							<input type="checkbox" id="tsd-filter-inherited" checked />
 							<label class="tsd-widget" for="tsd-filter-inherited">Inherited</label>
-							<input type="checkbox" id="tsd-filter-only-exported" />
-							<label class="tsd-widget" for="tsd-filter-only-exported">Only exported</label>
 						</div>
 					</div>
 					<a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
@@ -93,7 +91,7 @@
 					<div class="tsd-signature tsd-kind-icon">on<wbr>Progress<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/helper.ts#L52">helper.ts:52</a></li>
+							<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/a61d3fc/src/basicAPI.ts#L52">basicAPI.ts:52</a></li>
 						</ul>
 					</aside>
 				</section>
