--- a/classes/abstractpalettequantizer.html
+++ b/classes/abstractpalettequantizer.html
@@ -38,8 +38,6 @@
 							</div>
 							<input type="checkbox" id="tsd-filter-inherited" checked />
 							<label class="tsd-widget" for="tsd-filter-inherited">Inherited</label>
-							<input type="checkbox" id="tsd-filter-only-exported" />
-							<label class="tsd-widget" for="tsd-filter-only-exported">Only exported</label>
 						</div>
 					</div>
 					<a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
@@ -94,7 +92,7 @@
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="abstractpalettequantizer.html#quantize" class="tsd-kind-icon">quantize</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-class"><a href="abstractpalettequantizer.html#quantizeasync" class="tsd-kind-icon">quantize<wbr>Async</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="abstractpalettequantizer.html#quantizesync" class="tsd-kind-icon">quantize<wbr>Sync</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="abstractpalettequantizer.html#sample" class="tsd-kind-icon">sample</a></li>
 							</ul>
 						</section>
@@ -105,35 +103,35 @@
 				<h2>Methods</h2>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
 					<a name="quantize" class="tsd-anchor"></a>
-					<h3>quantize</h3>
+					<h3><span class="tsd-flag ts-flagAbstract">Abstract</span> quantize</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">quantize<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="palette.html" class="tsd-signature-type">Palette</a></li>
+						<li class="tsd-signature tsd-kind-icon">quantize<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">IterableIterator</span><span class="tsd-signature-symbol">&lt;</span><a href="../interfaces/palettequantizeryieldvalue.html" class="tsd-signature-type">PaletteQuantizerYieldValue</a><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/palette/paletteQuantizer.ts#L16">palette/paletteQuantizer.ts:16</a></li>
+									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/a61d3fc/src/palette/paletteQuantizer.ts#L14">palette/paletteQuantizer.ts:14</a></li>
 								</ul>
 							</aside>
-							<h4 class="tsd-returns-title">Returns <a href="palette.html" class="tsd-signature-type">Palette</a></h4>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">IterableIterator</span><span class="tsd-signature-symbol">&lt;</span><a href="../interfaces/palettequantizeryieldvalue.html" class="tsd-signature-type">PaletteQuantizerYieldValue</a><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
-					<a name="quantizeasync" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagAbstract">Abstract</span> quantize<wbr>Async</h3>
+					<a name="quantizesync" class="tsd-anchor"></a>
+					<h3>quantize<wbr>Sync</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">quantize<wbr>Async<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">IterableIterator</span><span class="tsd-signature-symbol">&lt;</span><a href="../interfaces/palettequantizeryieldvalue.html" class="tsd-signature-type">PaletteQuantizerYieldValue</a><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">quantize<wbr>Sync<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="palette.html" class="tsd-signature-type">Palette</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/palette/paletteQuantizer.ts#L14">palette/paletteQuantizer.ts:14</a></li>
+									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/a61d3fc/src/palette/paletteQuantizer.ts#L16">palette/paletteQuantizer.ts:16</a></li>
 								</ul>
 							</aside>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">IterableIterator</span><span class="tsd-signature-symbol">&lt;</span><a href="../interfaces/palettequantizeryieldvalue.html" class="tsd-signature-type">PaletteQuantizerYieldValue</a><span class="tsd-signature-symbol">&gt;</span></h4>
+							<h4 class="tsd-returns-title">Returns <a href="palette.html" class="tsd-signature-type">Palette</a></h4>
 						</li>
 					</ul>
 				</section>
@@ -147,7 +145,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/palette/paletteQuantizer.ts#L13">palette/paletteQuantizer.ts:13</a></li>
+									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/a61d3fc/src/palette/paletteQuantizer.ts#L13">palette/paletteQuantizer.ts:13</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -181,7 +179,7 @@
 								<a href="abstractpalettequantizer.html#quantize" class="tsd-kind-icon">quantize</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
-								<a href="abstractpalettequantizer.html#quantizeasync" class="tsd-kind-icon">quantize<wbr>Async</a>
+								<a href="abstractpalettequantizer.html#quantizesync" class="tsd-kind-icon">quantize<wbr>Sync</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="abstractpalettequantizer.html#sample" class="tsd-kind-icon">sample</a>
