--- a/classes/nearestcolor.html
+++ b/classes/nearestcolor.html
@@ -38,8 +38,6 @@
 							</div>
 							<input type="checkbox" id="tsd-filter-inherited" checked />
 							<label class="tsd-widget" for="tsd-filter-inherited">Inherited</label>
-							<input type="checkbox" id="tsd-filter-only-exported" />
-							<label class="tsd-widget" for="tsd-filter-only-exported">Only exported</label>
 						</div>
 					</div>
 					<a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
@@ -90,8 +88,8 @@
 						<section class="tsd-index-section ">
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="nearestcolor.html#quantize" class="tsd-kind-icon">quantize</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-overwrite"><a href="nearestcolor.html#quantizeasync" class="tsd-kind-icon">quantize<wbr>Async</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-overwrite"><a href="nearestcolor.html#quantize" class="tsd-kind-icon">quantize</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="nearestcolor.html#quantizesync" class="tsd-kind-icon">quantize<wbr>Sync</a></li>
 							</ul>
 						</section>
 					</div>
@@ -109,7 +107,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/image/nearestColor.ts#L16">image/nearestColor.ts:16</a></li>
+									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/a61d3fc/src/image/nearestColor.ts#L16">image/nearestColor.ts:16</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -125,45 +123,18 @@
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Methods</h2>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-overwrite">
 					<a name="quantize" class="tsd-anchor"></a>
 					<h3>quantize</h3>
-					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
-						<li class="tsd-signature tsd-kind-icon">quantize<span class="tsd-signature-symbol">(</span>pointContainer<span class="tsd-signature-symbol">: </span><a href="pointcontainer.html" class="tsd-signature-type">PointContainer</a>, palette<span class="tsd-signature-symbol">: </span><a href="palette.html" class="tsd-signature-type">Palette</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="pointcontainer.html" class="tsd-signature-type">PointContainer</a></li>
-					</ul>
-					<ul class="tsd-descriptions">
-						<li class="tsd-description">
-							<aside class="tsd-sources">
-								<p>Inherited from <a href="abstractimagequantizer.html">AbstractImageQuantizer</a>.<a href="abstractimagequantizer.html#quantize">quantize</a></p>
-								<ul>
-									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/image/imageQuantizer.ts#L15">image/imageQuantizer.ts:15</a></li>
-								</ul>
-							</aside>
-							<h4 class="tsd-parameters-title">Parameters</h4>
-							<ul class="tsd-parameters">
-								<li>
-									<h5>pointContainer: <a href="pointcontainer.html" class="tsd-signature-type">PointContainer</a></h5>
-								</li>
-								<li>
-									<h5>palette: <a href="palette.html" class="tsd-signature-type">Palette</a></h5>
-								</li>
-							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="pointcontainer.html" class="tsd-signature-type">PointContainer</a></h4>
-						</li>
-					</ul>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-overwrite">
-					<a name="quantizeasync" class="tsd-anchor"></a>
-					<h3>quantize<wbr>Async</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-overwrite">
-						<li class="tsd-signature tsd-kind-icon">quantize<wbr>Async<span class="tsd-signature-symbol">(</span>pointContainer<span class="tsd-signature-symbol">: </span><a href="pointcontainer.html" class="tsd-signature-type">PointContainer</a>, palette<span class="tsd-signature-symbol">: </span><a href="palette.html" class="tsd-signature-type">Palette</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">IterableIterator</span><span class="tsd-signature-symbol">&lt;</span><a href="../interfaces/imagequantizeryieldvalue.html" class="tsd-signature-type">ImageQuantizerYieldValue</a><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">quantize<span class="tsd-signature-symbol">(</span>pointContainer<span class="tsd-signature-symbol">: </span><a href="pointcontainer.html" class="tsd-signature-type">PointContainer</a>, palette<span class="tsd-signature-symbol">: </span><a href="palette.html" class="tsd-signature-type">Palette</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">IterableIterator</span><span class="tsd-signature-symbol">&lt;</span><a href="../interfaces/imagequantizeryieldvalue.html" class="tsd-signature-type">ImageQuantizerYieldValue</a><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
-								<p>Overrides <a href="abstractimagequantizer.html">AbstractImageQuantizer</a>.<a href="abstractimagequantizer.html#quantizeasync">quantizeAsync</a></p>
+								<p>Overrides <a href="abstractimagequantizer.html">AbstractImageQuantizer</a>.<a href="abstractimagequantizer.html#quantize">quantize</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/1b0ac2a/src/image/nearestColor.ts#L26">image/nearestColor.ts:26</a></li>
+									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/a61d3fc/src/image/nearestColor.ts#L26">image/nearestColor.ts:26</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -181,6 +152,33 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">IterableIterator</span><span class="tsd-signature-symbol">&lt;</span><a href="../interfaces/imagequantizeryieldvalue.html" class="tsd-signature-type">ImageQuantizerYieldValue</a><span class="tsd-signature-symbol">&gt;</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
+					<a name="quantizesync" class="tsd-anchor"></a>
+					<h3>quantize<wbr>Sync</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
+						<li class="tsd-signature tsd-kind-icon">quantize<wbr>Sync<span class="tsd-signature-symbol">(</span>pointContainer<span class="tsd-signature-symbol">: </span><a href="pointcontainer.html" class="tsd-signature-type">PointContainer</a>, palette<span class="tsd-signature-symbol">: </span><a href="palette.html" class="tsd-signature-type">Palette</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="pointcontainer.html" class="tsd-signature-type">PointContainer</a></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<p>Inherited from <a href="abstractimagequantizer.html">AbstractImageQuantizer</a>.<a href="abstractimagequantizer.html#quantizesync">quantizeSync</a></p>
+								<ul>
+									<li>Defined in <a href="https://github.com/ibezkrovnyi/image-quantization/blob/a61d3fc/src/image/imageQuantizer.ts#L15">image/imageQuantizer.ts:15</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>pointContainer: <a href="pointcontainer.html" class="tsd-signature-type">PointContainer</a></h5>
+								</li>
+								<li>
+									<h5>palette: <a href="palette.html" class="tsd-signature-type">Palette</a></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <a href="pointcontainer.html" class="tsd-signature-type">PointContainer</a></h4>
 						</li>
 					</ul>
 				</section>
@@ -204,11 +202,11 @@
 							<li class=" tsd-kind-constructor tsd-parent-kind-class">
 								<a href="nearestcolor.html#constructor" class="tsd-kind-icon">constructor</a>
 							</li>
-							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
+							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-overwrite">
 								<a href="nearestcolor.html#quantize" class="tsd-kind-icon">quantize</a>
 							</li>
-							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-overwrite">
-								<a href="nearestcolor.html#quantizeasync" class="tsd-kind-icon">quantize<wbr>Async</a>
+							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
+								<a href="nearestcolor.html#quantizesync" class="tsd-kind-icon">quantize<wbr>Sync</a>
 							</li>
 						</ul>
 					</li>
